# phi-scan

./: .gitattributes  .gitignore  .phi-scanignore  .phi-scanner.yml  .pip-audit-ignore.toml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  ROADMAP.md  SECURITY.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/complete-task/: SKILL.md
.claude/skills/hipaa-context/: SKILL.md
.claude/skills/new-task/: SKILL.md
.claude/skills/self-heal/: SKILL.md
.claude/skills/task-status/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: _supply_chain_export.py  claude_review.py  pip_audit_runner.py  sbom_generator.py  self_heal_runner.py  supply_chain_export.py
.github/workflows/: ci.yml  release.yml
.self-heal/: history.json
ci-templates/: README.md
ci-templates/aws-codebuild/: buildspec.yml
ci-templates/azure-devops/: azure-pipelines.yml
ci-templates/bitbucket-pipelines/: bitbucket-pipelines.yml
ci-templates/circleci/: config.yml  orb.yml
ci-templates/github-actions/: phi-scan.yml
ci-templates/gitlab-ci/: phi-scan.gitlab-ci.yml
ci-templates/jenkins/: Jenkinsfile
ci-templates/jenkins/vars/: phiScan.groovy
constraints/: spacy-model.txt
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: PROGRAM_SCORECARD.md  changelog.md  ci-adapter-contract.md  ci-cd-integration.md  ci-phase3-migration-plan.md  community-pro-cloud-matrix.md  compliance-frameworks.md  confidence-scoring.md  configuration.md  de-identification.md  detection-layers.md  getting-started.md  hipaa-identifiers.md  ignore-patterns.md  known-limitations.md  lts-eol-policy.md  org-migration-checklist.md  org-migration-preflight-report.md  org-migration-status.md  output-formats.md  plugin-api-v1.md  plugin-api-v1_1.md  plugin-developer-guide.md  plugin-hooks-v1_1-backlog.md  plugin-hooks-v1_1-design.md  release-versioning-policy.md  remediation-guide.md  security.md  threat-model.md  troubleshooting.md
docs/migration/: communication-draft.md  go-no-go.md  maintainer-checklist.md  post-transfer-patch-pack.md  ticket-template.md
docs/refactor/: audit-split-plan.md  cli-monolith-next-slice.md  report-split-plan.md
phi_scan/: __init__.py  ai_review.py  audit.py  baseline.py  cache.py  ci_integration.py  cli.py  cli_baseline.py  cli_config.py  cli_explain.py  cli_plugins.py  cli_report.py  cli_scan_config.py  cli_watch.py  compliance.py  config.py  constants.py  detection_coordinator.py  diff.py  exceptions.py  fhir_recognizer.py  hashing.py  help_text.py  hl7_scanner.py  logging_config.py  models.py  nlp_detector.py  notifier.py  output.py  plugin_api.py  plugin_loader.py  plugin_runtime.py  regex_detector.py  report.py  scanner.py  suppression.py  suppressor_runtime.py
phi_scan/audit/: __init__.py  crypto.py  hash_chain.py
phi_scan/ci/: __init__.py  _base.py  _detect.py  _env.py  _transport.py  aws_security_hub.py  azure.py  azure_devops.py  bitbucket.py  bitbucket_insights.py  circleci.py  codebuild.py  comment_body.py  github.py  gitlab.py  jenkins.py  sarif.py
phi_scan/cli/: __init__.py  baseline.py  baseline_helpers.py  ci_dispatch.py  config.py  explain.py  history.py  plugins.py  report.py  report_writers.py  scan.py  scan_config.py  scan_progress.py  watch.py
phi_scan/output/: __init__.py  console.py  dashboard.py  serializers.py
phi_scan/output/console/: __init__.py  baseline.py  core.py  findings.py  summary.py
phi_scan/report/: __init__.py  _shared.py  charts.py  html.py  pdf.py  tables.py
phi_scan/report/v2/: __init__.py  aggregation.py  console.py  findings.py  footer.py  glyphs.py  models.py  overview.py  playbook.py
scripts/: verify_phi_scan_config.sh
tests/: conftest.py  test_ai_review.py  test_audit.py  test_audit_hardening.py  test_baseline.py  test_cache.py  test_charts.py  test_ci_adapters.py  test_ci_integration.py  test_ci_integration_remaining.py  test_ci_integration_shim_parity.py  test_cli.py  test_cli_flags.py  test_cli_plugins.py  test_cli_shim_parity.py  test_compliance_2h.py  test_compliance_4b.py  test_compliance_mapping.py  test_config.py  test_constants.py  test_detection_2g.py  test_detection_coordinator.py  test_diff.py  test_exceptions.py  test_executive_summary.py  test_explain.py  test_fhir_recognizer.py  test_first_run.py  test_fixer.py  test_fixtures.py  test_hl7_scanner.py  test_ignore.py  test_integration.py  test_logging_config.py  test_models.py  test_module_structure.py  test_multi_framework.py  test_nlp_detector.py  test_notifier.py  test_notifier_ssrf_adversarial.py  (+23 more)
tests/fixtures/: manifest.json
tests/fixtures/clean/: no_phi.py  ssn_reserved.py  truly_clean.py  version_numbers.py
tests/fixtures/goldens/csv/: clean.csv  contains_email.csv  contains_ssn.csv  multi_finding.csv
tests/fixtures/goldens/json/: clean.json  contains_email.json  contains_ssn.json  multi_finding.json
tests/fixtures/goldens/junit/: clean.xml  contains_email.xml  contains_ssn.xml  multi_finding.xml
tests/fixtures/goldens/sarif/: clean.sarif.json  contains_email.sarif.json  contains_ssn.sarif.json  multi_finding.sarif.json
tests/fixtures/phi/: credentials.py  dates.py  device_vehicle.py  email.py  genetic.py  geographic.py  medical_ids.py  medicare.py  names.py  network.py  parity.py  phone.py  quasi_identifiers.py  ssn.py
