[project]
name = "phi-scan"
version = "0.5.0"
description = "PHI/PII Scanner for CI/CD pipelines. HIPAA & FHIR compliant. Local execution only."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [{name = "Joey Essak", email = "joey.essak@gmail.com"}]
keywords = ["phi", "pii", "hipaa", "fhir", "scanner", "compliance", "security", "cicd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]~=0.24.1",
    "rich~=13.7",
    "pyyaml~=6.0",
    "python-dotenv~=1.2",
    "pyfiglet~=1.0",
    "watchdog~=4.0",
    "httpx~=0.27",  # webhook notifications (Phase 5) + CI/CD integrations (Phase 6); never transmits PHI
    "cryptography>=42.0",  # AES-256-GCM encryption at rest for audit findings_json (Phase 5)
    "pathspec~=0.12",
    "fpdf2>=2.7",
    "jinja2>=3.1",
    "matplotlib>=3.8",
]

[project.scripts]
phi-scan = "phi_scan.cli:app"

[project.urls]
Homepage = "https://github.com/joeyessak/phi-scan"
Repository = "https://github.com/joeyessak/phi-scan"
Issues = "https://github.com/joeyessak/phi-scan/issues"
Changelog = "https://github.com/joeyessak/phi-scan/blob/main/CHANGELOG.md"

[project.optional-dependencies]
nlp = ["presidio-analyzer>=2.0", "presidio-anonymizer>=2.0", "spacy>=3.7"]
fhir = ["fhir.resources>=7.0"]
hl7 = ["hl7>=0.4"]
reports = ["fpdf2>=2.7", "jinja2>=3.1", "matplotlib>=3.8"]
full = ["phi-scan[nlp]", "phi-scan[fhir]", "phi-scan[hl7]", "phi-scan[reports]"]

[dependency-groups]  # uv-native; pip users install dev deps via source checkout + uv sync
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.6",
    "mypy>=1.10",
    "faker>=24.0",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["phi_scan"]

[tool.hatch.build.targets.sdist]
include = [
    "phi_scan/",
    ".phi-scanner.yml",
    ".pre-commit-hooks.yaml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# HTML/CSS template strings in report.py contain intentionally long lines
"phi_scan/report.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=phi_scan --cov-fail-under=80 --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.mypy]
python_version = "3.12"
strict = true
